Modification Home et css

--- a/index.html
+++ b/index.html
@@ -10,17 +10,23 @@
     <meta name="distribution" content="global">
     <meta name="KeyWords" content="Conference">
     <title>Conference Template</title>
+    <style>
+        img {
+          width: 100%;
+        }
+    </style>
 </head>
 
 <body>
 
     <div class="banner">
-        <img src="assets/banner.jpg" alt="Conference Template Banner">
+        <img title="LucasD, CC BY-SA 4.0 &lt;https://creativecommons.org/licenses/by-sa/4.0&gt;, via Wikimedia Commons" href="https://commons.wikimedia.org/wiki/File:Champagne_berrichonne.jpg"><img width="512" alt="Champagne berrichonne" src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/36/Champagne_berrichonne.jpg/512px-Champagne_berrichonne.jpg?20170617104352" alt="Conference Template Banner">
+ <!--       <img src="assets/banner.jpg" alt="Conference Template Banner">-->
         <div class="top-left">
-            <span class="title1">Conference</span><span class="title2">Template</span> <span class="year">2525</span>
+            <span class="title1">ODD</span><span class="title2">TALE</span> <span class="year">2025</span>
         </div>
         <div class="bottom-right">
-            June 31, 2525 <br> University Name, and City Maybe
+            Onirical Delights of Draco-Teaological Approaches to Life Entanglement <br> May 31, 2025 <br> La Boutardière, 36100 La Champenoise, France 
         </div>
     </div>
 
@@ -44,14 +50,21 @@
         </tr>
     </table>
 
-    <h2>What is This Website?</h2>
+    <h2>Добро пожаловать!</h2>
     <p>
-        This website is a template that you could use for a (small) academic conference. 
-        It&rsquo;s got a page for registration, where you can embed a Google Form or some other way for participants to register.
-        It&rsquo;s got a program page to list the schedule for the conference.
-        It&rsquo;s got a directions page to add a bunch of instructions how to get to the conference.
-        It&rsquo;s got a page to put up the flyers and other promotional materials for folks to download.
+        0-й международный симпозиум Мечтательные Наслаждения Драконо-Чайных Подходов к Жизненным Переплетениям (ODDTALE 2025) состоится 31 мая 2025 года в La Boutardière, 36100 La Champenoise, Франция. 
     </p>
+    <h2>Bienvenue !</h2>
+    <p>
+        Le 0ème symposium international sur les Délices Oniriques des Approches Draco-Théologiques à l'Intrication des Vies (ODDTALE 2025) aura lieu à La Boutardière, 36100 La Champenoise, France, le 31 mai 2025. 
+    </p>
+    <h2>Welcome!</h2>
+    <p>
+       The 0th international symposium on Onirical Delights of Draco-Teaological Approaches to Life Entanglement (ODDTALE 2025) will take place at La Boutardière, 36100 La Champenoise, France on May 31st, 2025. 
+    </p>
+    <p>
+<!--
+
     <p>
         You can use this template by cloning all the files from this
         <a target="_blank" href="https://github.com/mikepierce/conference-website-template">GitHub repo here</a>.
@@ -62,7 +75,7 @@
     <p>
         This paragraph is just some filler text to give the homepage some volume:
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum dignissim et est et euismod. Fusce et metus tempus, pellentesque ex at, convallis nulla. Ut fringilla commodo tincidunt. Fusce sed est eu massa placerat iaculis eu at mauris. Nullam ut mollis nisi, quis malesuada risus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nam ipsum tortor, suscipit non tincidunt vel, bibendum in libero. Nulla facilisi. Pellentesque vitae neque metus. Cras quis est pharetra, vestibulum nisl et, viverra ipsum. Etiam porta dignissim purus, quis tempor metus volutpat eu. Praesent pulvinar libero eget purus tincidunt finibus.
-    </p>
+    </p> -->
 
     <h2>Organizers</h2>
     <p>
