Modification directions et registration

--- a/directions/index.html
+++ b/directions/index.html
@@ -9,18 +9,24 @@
     <meta name="resource-type" content="document">
     <meta name="distribution" content="global">
     <meta name="KeyWords" content="Conference">
-    <title>Directions | Conference Template</title>
+    <title>Directions | ODDTALE 2025</title>
+    <style>
+        img {
+          width: 100%;
+        }
+    </style>
 </head>
 
 <body>
 
     <div class="banner">
-        <img src="assets/banner.jpg" alt="Conference Template Banner">
+        <img title="LucasD, CC BY-SA 4.0 &lt;https://creativecommons.org/licenses/by-sa/4.0&gt;, via Wikimedia Commons" href="https://commons.wikimedia.org/wiki/File:Champagne_berrichonne.jpg"><img width="512" alt="Champagne berrichonne" src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/36/Champagne_berrichonne.jpg/512px-Champagne_berrichonne.jpg?20170617104352" alt="Conference Template Banner">
+ <!--       <img src="assets/banner.jpg" alt="Conference Template Banner">-->
         <div class="top-left">
-            <span class="title1">Conference</span><span class="title2">Template</span> <span class="year">2525</span>
+            <span class="title1">ODD</span><span class="title2">TALE</span> <span class="year">2025</span>
         </div>
         <div class="bottom-right">
-            June 31, 2525 <br> University Name, and City Maybe
+            Onirical Delights of Draco-Teaological Approaches to Life Entanglement <br> May 31, 2025 <br> La Boutardière, 36100 La Champenoise, France 
         </div>
     </div>
 
@@ -57,7 +63,7 @@
         I&rsquo;ve opted to use a placeholder image of a kitten below.
     </p>
 
-    <iframe class="directions" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d134998.56138929052!2d-121.98776790326531!3d37.869213445646146!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808ff431db2f96d1%3A0x8b99d90a20aa67de!2sMt+Diablo!5e0!3m2!1sen!2sus!4v1561787340910!5m2!1sen!2sus"></iframe>
+    <iframe class="directions" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2723.5308184951!2d1.7686423763612982!3d46.95125973300195!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47fb0fc17496b4f5%3A0xce625e00c8b4221c!2sLa%20Boutardi%C3%A8re%2C%2036100%20La%20Champenoise!5e0!3m2!1sen!2sfr!4v1727717382158!5m2!1sen!2sfr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
     <img class="center" src="assets/kitten4.jpg" alt="This is just a kitten right now" id="kitten">
 
