--- a/registration/index.html
+++ b/registration/index.html
@@ -9,18 +9,24 @@
     <meta name="resource-type" content="document">
     <meta name="distribution" content="global">
     <meta name="KeyWords" content="Conference">
-    <title>Registration | Conference Template</title>
+    <title>Registration | ODDTALE 2025</title>
+    <style>
+        img {
+          width: 100%;
+        }
+    </style>
 </head>
 
 <body>
 
     <div class="banner">
-        <img src="assets/banner.jpg" alt="Conference Template Banner">
+        <img title="LucasD, CC BY-SA 4.0 &lt;https://creativecommons.org/licenses/by-sa/4.0&gt;, via Wikimedia Commons" href="https://commons.wikimedia.org/wiki/File:Champagne_berrichonne.jpg"><img width="512" alt="Champagne berrichonne" src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/36/Champagne_berrichonne.jpg/512px-Champagne_berrichonne.jpg?20170617104352" alt="Conference Template Banner">
+ <!--       <img src="assets/banner.jpg" alt="Conference Template Banner">-->
         <div class="top-left">
-            <span class="title1">Conference</span><span class="title2">Template</span> <span class="year">2525</span>
+            <span class="title1">ODD</span><span class="title2">TALE</span> <span class="year">2025</span>
         </div>
         <div class="bottom-right">
-            June 31, 2525 <br> University Name, and City Maybe
+            Onirical Delights of Draco-Teaological Approaches to Life Entanglement <br> May 31, 2025 <br> La Boutardière, 36100 La Champenoise, France 
         </div>
     </div>
 
