--- a/ressources/index.html
+++ b/ressources/index.html
@@ -2,14 +2,14 @@
 <html lang='en'>
 
 <head>
-    <base href=".">
+    <base href="..">
     <link rel="shortcut icon" type="image/png" href="assets/favicon.png"/>
     <link rel="stylesheet" type="text/css" media="all" href="assets/main.css"/>
     <meta name="description" content="Conference Template">
     <meta name="resource-type" content="document">
     <meta name="distribution" content="global">
     <meta name="KeyWords" content="Conference">
-    <title>ODDTALE 2025</title>
+    <title>Registration | ODDTALE 2025</title>
     <style>
         img {
           width: 100%;
@@ -33,10 +33,10 @@
     <table class="navigation">
         <tr>
             <td class="navigation">
-                <a class="current" title="Conference Home Page" href=".">Home</a>
+                <a title="Conference Home Page" href=".">Home</a>
             </td>
             <td class="navigation">
-                <a title="Register for the Conference" href="registration">Registration</a>
+                <a class="current" title="Register for the Conference" href="registration">Registration</a>
             </td>
             <td class="navigation">
                 <a title="Conference Program" href="program">Program</a> 
@@ -47,65 +47,23 @@
             <td class="navigation">
                 <a title="Conference Flyer" href="flyer">Flyer</a>
             </td>
-            <td class="navigation">
-                <a title="Ressources" href="ressources">Ressources</a>
-            </td>
         </tr>
     </table>
 
-    <h2>Добро пожаловать!</h2>
-    <p>
-        0-й международный симпозиум Мечтательные Наслаждения Драконо-Чайных Подходов к Жизненным Переплетениям (ODDTALE 2025) состоится 31 мая 2025 года в La Boutardière, 36100 La Champenoise, Франция. 
-    </p>
-    <h2>Bienvenue !</h2>
-    <p>
-        Le 0ème symposium international sur les Délices Oniriques des Approches Draco-Théologiques à l'Intrication des Vies (ODDTALE 2025) aura lieu à La Boutardière, 36100 La Champenoise, France, le 31 mai 2025. 
-    </p>
-    <h2>Welcome!</h2>
-    <p>
-       The 0th international symposium on Onirical Delights of Draco-Teaological Approaches to Life Entanglement (ODDTALE 2025) will take place at La Boutardière, 36100 La Champenoise, France on May 31st, 2025. 
-    </p>
-    <p>
-<!--
+    <br>
 
     <p>
-        You can use this template by cloning all the files from this
-        <a target="_blank" href="https://github.com/mikepierce/conference-website-template">GitHub repo here</a>.
-        This template was created from a website I made for 
-        <a target="_blank" href="http://math.ucr.edu/~mathconn/">MathConnections 2019</a>,
-        in case you want to see an example of this template being used in the wild.
+        Here&rsquo;s where you provide instructions how to register for your conference.
+        We used a <a href="https://www.google.com/forms/about/">Google Form</a> 
+        and embedded it into an <i>iframe</i> (it&rsquo;s commented out in the html here).
     </p>
+    <!--
+    <iframe class="registration" src="EMBED LINK FOR GOOGLE FORM HERE"></iframe>
+    -->
     <p>
-        This paragraph is just some filler text to give the homepage some volume:
+        Here&rsquo;s another paragraph of filler text:
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum dignissim et est et euismod. Fusce et metus tempus, pellentesque ex at, convallis nulla. Ut fringilla commodo tincidunt. Fusce sed est eu massa placerat iaculis eu at mauris. Nullam ut mollis nisi, quis malesuada risus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nam ipsum tortor, suscipit non tincidunt vel, bibendum in libero. Nulla facilisi. Pellentesque vitae neque metus. Cras quis est pharetra, vestibulum nisl et, viverra ipsum. Etiam porta dignissim purus, quis tempor metus volutpat eu. Praesent pulvinar libero eget purus tincidunt finibus.
-    </p> -->
-
-    <h2>Organizers</h2>
-    <p>
-        Here&rsquo;s a good place to list the organizers and sponsors of the conference,
-        as well as list contact information for the organizers,
-        and show off the logos of the sponsors.
-        It looks like his conference was sponsored by kittens!
     </p>
-    <table class="sponsors">
-        <tr>
-            <td class="sponsor">
-                <a href="http://www.eyebleach.me/">
-                    <img src="assets/kitten1.jpg" alt="First Sponsor Name">
-                </a>
-            </td>
-            <td class="sponsor">
-                <a href="http://www.eyebleach.me/">
-                    <img src="assets/kitten2.jpg" alt="Second Sponsor Name" style="width: 80%">
-                </a>
-            </td>
-            <td class="sponsor">
-                <a href="http://www.eyebleach.me/">
-                    <img src="assets/kitten3.jpg" alt="Third Sponsor Name">
-                </a>
-            </td>
-        </tr>
-    </table>
 
     <footer>
         &copy; Conference Organizers
