--- a/ressources/index.html
+++ b/ressources/index.html
@@ -9,7 +9,7 @@
     <meta name="resource-type" content="document">
     <meta name="distribution" content="global">
     <meta name="KeyWords" content="Conference">
-    <title>Registration | ODDTALE 2025</title>
+    <title>Ressources | ODDTALE 2025</title>
     <style>
         img {
           width: 100%;
