Added French registration

--- a/registration/index.html
+++ b/registration/index.html
@@ -57,6 +57,8 @@
         We used a <a href="https://www.google.com/forms/about/">Google Form</a> 
         and embedded it into an <i>iframe</i> (it&rsquo;s commented out in the html here).
     </p>
+
+    <iframe src="https://framaforms.org/participation-a-oddtale-2025-1727635332" width="100%" height="800" border="0"></iframe>
     <!--
     <iframe class="registration" src="EMBED LINK FOR GOOGLE FORM HERE"></iframe>
     -->
