--- a/registration/index.html
+++ b/registration/index.html
@@ -53,12 +53,10 @@
     <br>
 
     <p>
-        Here&rsquo;s where you provide instructions how to register for your conference.
-        We used a <a href="https://www.google.com/forms/about/">Google Form</a> 
-        and embedded it into an <i>iframe</i> (it&rsquo;s commented out in the html here).
+        Bla bla bla enregistrement.
     </p>
 
-    <iframe src="https://framaforms.org/participation-a-oddtale-2025-1727635332" width="100%" height="800" border="0"></iframe>
+    <iframe class="registration" src="https://framaforms.org/participation-a-oddtale-2025-1727635332" width="100%" height="800" border="0"></iframe>
     <!--
     <iframe class="registration" src="EMBED LINK FOR GOOGLE FORM HERE"></iframe>
     -->
