--- a/flyer/index.html
+++ b/flyer/index.html
@@ -69,7 +69,7 @@
     </table>
 
     <footer>
-        &copy; Conference Organizers
+        &copy; Caritchev
         &nbsp;|&nbsp; Design by <a href="https://github.com/mikepierce">Mike Pierce</a>
     </footer>
 
