--- a/registration/index.html
+++ b/registration/index.html
@@ -63,7 +63,7 @@
     
 
     <footer>
-        &copy; Conference Organizers
+        &copy; Caritchev
         &nbsp;|&nbsp; Design by <a href="https://github.com/mikepierce">Mike Pierce</a>
     </footer>
 
