--- a/directions/index.html
+++ b/directions/index.html
@@ -68,7 +68,7 @@
     <img class="center" src="assets/kitten4.jpg" alt="This is just a kitten right now" id="kitten">
 
     <footer>
-        &copy; Conference Organizers
+        &copy; Caritchev
         &nbsp;|&nbsp; Design by <a href="https://github.com/mikepierce">Mike Pierce</a>
     </footer>
 
