--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     </table>
 
     <footer>
-        &copy; Conference Organizers
+        &copy; Caritchev
         &nbsp;|&nbsp; Design by <a href="https://github.com/mikepierce">Mike Pierce</a>
     </footer>
 
