--- a/program/index.html
+++ b/program/index.html
@@ -221,7 +221,7 @@ Dimanche :
     </table>
 
     <footer>
-        &copy; Conference Organizers
+        &copy; Caritchev
         &nbsp;|&nbsp; Design by <a href="https://github.com/mikepierce">Mike Pierce</a>
     </footer>
 
