--- a/ressources/index.html
+++ b/ressources/index.html
@@ -66,7 +66,7 @@
     </p>
 
     <footer>
-        &copy; Conference Organizers
+        &copy; Caritchev
         &nbsp;|&nbsp; Design by <a href="https://github.com/mikepierce">Mike Pierce</a>
     </footer>
 
