--- a/flyer/index.html
+++ b/flyer/index.html
@@ -41,6 +41,9 @@
             <td class="navigation">
                 <a class="current" title="Conference Flyer" href="flyer">Flyer</a>
             </td>
+            <td class="navigation">
+                <a title="Ressources" href="ressources">Ressources</a>
+            </td>
         </tr>
     </table>
 
