--- a/program/index.html
+++ b/program/index.html
@@ -50,6 +50,9 @@
             <td class="navigation">
                 <a title="Conference Flyer" href="flyer">Flyer</a>
             </td>
+            <td class="navigation">
+                <a title="Ressources" href="ressources">Ressources</a>
+            </td>
         </tr>
     </table>
 
