--- a/ressources/index.html
+++ b/ressources/index.html
@@ -47,6 +47,9 @@
             <td class="navigation">
                 <a title="Conference Flyer" href="flyer">Flyer</a>
             </td>
+            <td class="navigation">
+                <a title="Ressources" href="ressources">Ressources</a>
+            </td>
         </tr>
     </table>
 
