Essai navigation page

--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
         </tr>
     </table>
 
+    <a href="#section2">Go to Section 2</a>
+
+
     <h2>Добро пожаловать!</h2>
     <p>
         0-й международный симпозиум Мечтательные Наслаждения Драконо-Чайных Подходов к Жизненным Переплетениям (ODDTALE 2025) состоится 31 мая 2025 года в La Boutardière, 36100 La Champenoise, Франция. 
@@ -79,6 +82,9 @@
         This paragraph is just some filler text to give the homepage some volume:
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum dignissim et est et euismod. Fusce et metus tempus, pellentesque ex at, convallis nulla. Ut fringilla commodo tincidunt. Fusce sed est eu massa placerat iaculis eu at mauris. Nullam ut mollis nisi, quis malesuada risus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nam ipsum tortor, suscipit non tincidunt vel, bibendum in libero. Nulla facilisi. Pellentesque vitae neque metus. Cras quis est pharetra, vestibulum nisl et, viverra ipsum. Etiam porta dignissim purus, quis tempor metus volutpat eu. Praesent pulvinar libero eget purus tincidunt finibus.
     </p> -->
+
+
+    <h2 id="section2">Section 2</h2>
 
     <h2>Organizers</h2>
     <p>
