--- a/index.html
+++ b/index.html
@@ -53,18 +53,20 @@
         </tr>
     </table>
 
-    <a href="#section2">Go to Section 2</a>
+    <a href="#section-ru">По русски</a>
+    <a href="#section-fr">En français</a>
+    <a href="#section-en">In English</a>
 
 
-    <h2>Добро пожаловать!</h2>
+    <h2 id="section-ru">Добро пожаловать!</h2>
     <p>
         0-й международный симпозиум Мечтательные Наслаждения Драконо-Чайных Подходов к Жизненным Переплетениям (ODDTALE 2025) состоится 31 мая 2025 года в La Boutardière, 36100 La Champenoise, Франция. 
     </p>
-    <h2>Bienvenue !</h2>
+    <h2 id="section-fr">Bienvenue !</h2>
     <p>
         Le 0ème symposium international sur les Délices Oniriques des Approches Draco-Théologiques à l'Intrication des Vies (ODDTALE 2025) aura lieu à La Boutardière, 36100 La Champenoise, France, le 31 mai 2025. 
     </p>
-    <h2>Welcome!</h2>
+    <h2 id="section-en">Welcome!</h2>
     <p>
        The 0th international symposium on Onirical Delights of Draco-Teaological Approaches to Life Entanglement (ODDTALE 2025) will take place at La Boutardière, 36100 La Champenoise, France on May 31st, 2025. 
     </p>
