Cosmetic changes (center)

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
         img {
           width: 100%;
         }
+        h1 {
+            text-align: center;
+        }
     </style>
 </head>
 
@@ -53,9 +56,9 @@
         </tr>
     </table>
 
-    <a href="#section-ru">По русски</a>
-    <a href="#section-fr">En français</a>
-    <a href="#section-en">In English</a>
+    <h1 href="#section-ru">По русски</h1>
+    <h1 href="#section-fr">En français</h1>
+    <h1 href="#section-en">In English</h1>
 
 
     <h2 id="section-ru">Добро пожаловать!</h2>
@@ -85,9 +88,7 @@
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum dignissim et est et euismod. Fusce et metus tempus, pellentesque ex at, convallis nulla. Ut fringilla commodo tincidunt. Fusce sed est eu massa placerat iaculis eu at mauris. Nullam ut mollis nisi, quis malesuada risus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nam ipsum tortor, suscipit non tincidunt vel, bibendum in libero. Nulla facilisi. Pellentesque vitae neque metus. Cras quis est pharetra, vestibulum nisl et, viverra ipsum. Etiam porta dignissim purus, quis tempor metus volutpat eu. Praesent pulvinar libero eget purus tincidunt finibus.
     </p> -->
 
-
-    <h2 id="section2">Section 2</h2>
-
+    <!--
     <h2>Organizers</h2>
     <p>
         Here&rsquo;s a good place to list the organizers and sponsors of the conference,
@@ -113,12 +114,12 @@
                 </a>
             </td>
         </tr>
-    </table>
+    </table> -->
 
     <footer>
         &copy; Caritchev
         &nbsp;|&nbsp; Design by <a href="https://github.com/mikepierce">Mike Pierce</a>
-    </footer>
+    </footer>  
 
 </body>
 </html>
