--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <base href=".">
     <link rel="shortcut icon" type="image/png" href="assets/favicon.png"/>
     <link rel="stylesheet" type="text/css" media="all" href="assets/main.css"/>
-    <meta name="description" content="Conférence de mariage">
+    <meta name="description" content="Свадебная конференция | Conférence de mariage | Wedding conference">
     <meta name="resource-type" content="document">
     <meta name="distribution" content="global">
     <meta name="KeyWords" content="Conference">
@@ -36,13 +36,13 @@
     <table class="navigation">
         <tr>
             <td class="navigation">
-                <a class="current" title="Conference Home Page" href=".">Home</a>
+                <a class="current" title="Главная страница конференции | Page d'accueil de la conférence | Conference Home Page" href=".">Главная | Accueil | Home</a>
             </td>
             <td class="navigation">
-                <a title="Register for the Conference" href="registration">Registration</a>
+                <a title="Register for the Conference" href="registration">Запись | Inscription | Registration</a>
             </td>
             <td class="navigation">
-                <a title="Conference Program" href="program">Program</a> 
+                <a title="Conference Program" href="program"> Программа | Programme | Program</a> 
             </td>
             <td class="navigation">
                 <a title="Directions to the Conference" href="directions">Directions</a>
