--- a/ressources/index.html
+++ b/ressources/index.html
@@ -5,7 +5,7 @@
     <base href="..">
     <link rel="shortcut icon" type="image/png" href="assets/favicon.png"/>
     <link rel="stylesheet" type="text/css" media="all" href="assets/main.css"/>
-    <meta name="description" content="Conférence de mariage">
+    <meta name="description" content="Свадебная конференция | Conférence de mariage | Wedding conference">
     <meta name="resource-type" content="document">
     <meta name="distribution" content="global">
     <meta name="KeyWords" content="Conference">
