--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
                 <a title="Conference Program" href="program"> Программа | Programme | Program</a> 
             </td>
             <td class="navigation">
-                <a title="Directions to the Conference" href="directions">Directions</a>
+                <a title="Directions to the Conference" href="directions">Расположение | Lieu | Venue</a>
             </td>
             <td class="navigation">
                 <a title="Conference Flyer" href="flyer">Flyer</a>
             </td>
             <td class="navigation">
-                <a title="Ressources" href="ressources">Ressources</a>
+                <a title="Ressources" href="ressources">Материалы | Ressources | Resources</a>
             </td>
         </tr>
     </table>
