--- a/program/index.html
+++ b/program/index.html
@@ -56,7 +56,160 @@
         </tr>
     </table>
 
-    <h2>ODDTALE 2025 Program</h2>
+    <h2> ODDTALE 2025 --  Программа </h2>
+
+    <h3>Суббота 31 мая</h3>
+    <table>
+        <tr>
+            <td class="date" rowspan="2">
+                13.30 - 14.30
+            </td>
+            <td class="title-special">
+                Приветствие
+            </td>
+        </tr>
+        <tr>
+            <td class="abstract">
+                Приветствие, распределение мест в общежитии и палаточных участков, обустройство на месте. 
+            </td>
+        </tr>
+    </table>
+
+    <table>
+        <tr>
+            <td class="date" rowspan="3">
+                14.30 - 15.30
+            </td>
+            <td class="title">
+                Сбор
+            </td>
+        </tr>
+        <tr>
+            <td class="abstract">
+                Готовьте свои голосовые связки, а мы подготовим слова! Подробнее см. в разделе Ресурсы.
+            </td>
+        </tr>
+    </table>
+
+    <table class="plenary">
+        <tr>
+            <td class="date" rowspan="3">
+                15.30 - 17.00
+            </td>
+            <td class="title">
+                Приглашенный доклад
+            </td> 
+        </tr>
+   <!--      <tr>
+            <td class="speaker">
+                Speaker Name (University)
+            </td> -->
+        </tr> 
+        <tr>
+            <td class="abstract">
+                Заклинание и немного горячей воды, несколько историй спустя - произойдет ли переплетение?
+            </td>
+        </tr>
+    </table>
+
+    <table>
+        <tr>
+            <td class="date" rowspan="3">
+                17:00 - 18:00
+            </td>
+            <td class="title-special">
+                Торжественный чай
+            </td>
+        </tr>
+        <tr>
+            <td class="abstract">
+                В честь приглашенных, в честь события, за радость разделить его с вами.
+            </td>
+        </tr>
+    </table>
+
+    <table>
+        <tr>
+            <td class="date" rowspan="3">
+                18:00 - 20:00
+            </td>
+            <td class="title">
+                Большой поединок и маленький танцевальный вечер
+            </td>
+        </tr>
+        <tr>
+            <td class="abstract">
+                Несколько мечей, кусочек тролля - всё, что нужно, чтобы размять большие и маленькие ноги! А если импровизация вас не вдохновляет, загляните в Ресурсы.
+            </td>
+        </tr>
+    </table>
+
+    <table>
+        <tr>
+            <td class="date" rowspan="2">
+                20:00
+            </td>
+            <td class="title-special">
+                Начало трапезы
+            </td>
+        </tr>
+        <tr>
+            <td class="abstract">
+                Это будет шведский стол, и ингредиенты будут объяснены, насколько это возможно. Не забудьте сообщить нам о любых непереносимостях, аллергиях или диетических требованиях в формуляре регистрации!
+            </td>
+        </tr>
+    </table>
+
+    <table>
+        <tr>
+            <td class="date" rowspan="2">
+                22h
+            </td>
+            <td class="title">
+                Début de la soirée dansante (boum) & de la soirée ludique (pas boum)
+            </td>
+        </tr>
+        <tr>
+            <td class="abstract">
+                Que vous aimiez vos décibels nombreux et clinquants ou précieux et doux, nous vous souhaitons chaussure et salle à votre pied.
+            </td>
+        </tr>
+    </table>
+
+    <h3>Dimanche 1 juin</h3>
+    <table>
+        <tr>
+            <td class="date" rowspan="2">
+                11h
+            </td>
+            <td class="title-special">
+                Brunch et discutaille
+            </td>
+        </tr>
+        <tr>
+            <td class="abstract">
+                On s'occupe du brunch et avec un peu de chance, le reste viendra !
+            </td>
+        </tr>
+    </table>
+
+    <table>
+        <tr>
+            <td class="date" rowspan="2">
+                15h
+            </td>
+            <td class="title">
+                Soirée de rangement festive
+            </td>
+        </tr>
+        <tr>
+            <td class="abstract">
+               L'ambiance sera présente, les serpillères et le lave vaisselle aussi.
+            </td>
+        </tr>
+    </table>
+
+    <h2> ODDTALE 2025 -- Programme </h2>
 
 <!--    Programme du mariage :
 Samedi :
@@ -71,6 +224,159 @@ Samedi :
 Dimanche :
 11h : brunch et discutaille
 15h : soirée de rangement festive  -->
+
+    <h3>Samedi 31 mai</h3>
+    <table>
+        <tr>
+            <td class="date" rowspan="2">
+                13h30-14h30
+            </td>
+            <td class="title-special">
+                Accueil
+            </td>
+        </tr>
+        <tr>
+            <td class="abstract">
+                Accueil, distribution des dortoirs et emplacements des tentes, installation sur place. 
+            </td>
+        </tr>
+    </table>
+
+    <table>
+        <tr>
+            <td class="date" rowspan="3">
+                14h30-15h30
+            </td>
+            <td class="title">
+                Rassemblement
+            </td>
+        </tr>
+        <tr>
+            <td class="abstract">
+                Préparez vos voix et vos élocutions, on prévoit les cartons ! Voir Ressources pour plus de détails.
+            </td>
+        </tr>
+    </table>
+
+    <table class="plenary">
+        <tr>
+            <td class="date" rowspan="3">
+                15h30-17h
+            </td>
+            <td class="title">
+                Conférence invitée/keynote
+            </td> 
+        </tr>
+   <!--      <tr>
+            <td class="speaker">
+                Speaker Name (University)
+            </td> -->
+        </tr> 
+        <tr>
+            <td class="abstract">
+                Une invocation et de l'eau chaude, quelques histoires plus tard, l'intrication aura-t-elle lieu ?
+            </td>
+        </tr>
+    </table>
+
+    <table>
+        <tr>
+            <td class="date" rowspan="3">
+                17h-18h 
+            </td>
+            <td class="title-special">
+                Thé d'honneur
+            </td>
+        </tr>
+        <tr>
+            <td class="abstract">
+                En l'honneur des personnes invitées, en l'honneur de l'occasion, au plaisir de la partager avec vous.
+            </td>
+        </tr>
+    </table>
+
+    <table>
+        <tr>
+            <td class="date" rowspan="3">
+                18h-20h
+            </td>
+            <td class="title">
+                Grande joute et petite soirée dansante
+            </td>
+        </tr>
+        <tr>
+            <td class="abstract">
+                Quelques épées, un bout de troll, de quoi dégourdir de petites et grandes jambes ! Si l'improvisation ne vous inspire pas, venez-donc voir dans les Ressources.
+            </td>
+        </tr>
+    </table>
+
+    <table>
+        <tr>
+            <td class="date" rowspan="2">
+                20h
+            </td>
+            <td class="title-special">
+                Début du repas
+            </td>
+        </tr>
+        <tr>
+            <td class="abstract">
+                Ce sera un buffet, les ingrédients seront explicités autant que possible. N'oubliez pas de nous préciser toute intolérance, allergie, ou régime alimentaire dans le formulaire de participation !
+            </td>
+        </tr>
+    </table>
+
+    <table>
+        <tr>
+            <td class="date" rowspan="2">
+                22h
+            </td>
+            <td class="title">
+                Début de la soirée dansante (boum) & de la soirée ludique (pas boum)
+            </td>
+        </tr>
+        <tr>
+            <td class="abstract">
+                Que vous aimiez vos décibels nombreux et clinquants ou précieux et doux, nous vous souhaitons chaussure et salle à votre pied.
+            </td>
+        </tr>
+    </table>
+
+    <h3>Dimanche 1 juin</h3>
+    <table>
+        <tr>
+            <td class="date" rowspan="2">
+                11h
+            </td>
+            <td class="title-special">
+                Brunch et discutaille
+            </td>
+        </tr>
+        <tr>
+            <td class="abstract">
+                On s'occupe du brunch et avec un peu de chance, le reste viendra !
+            </td>
+        </tr>
+    </table>
+
+    <table>
+        <tr>
+            <td class="date" rowspan="2">
+                15h
+            </td>
+            <td class="title">
+                Soirée de rangement festive
+            </td>
+        </tr>
+        <tr>
+            <td class="abstract">
+               L'ambiance sera présente, les serpillères et le lave vaisselle aussi.
+            </td>
+        </tr>
+    </table>
+
+    <h2> ODDTALE 2025 -- Programme </h2>
 
     <h3>Samedi 31 mai</h3>
     <table>
