--- a/program/index.html
+++ b/program/index.html
@@ -56,7 +56,11 @@
         </tr>
     </table>
 
-    <h2> ODDTALE 2025 --  Программа </h2>
+    <h3 href="#section-ru">По русски</h3>
+    <h3 href="#section-fr">En français</h3>
+    <h3 href="#section-en">In English</h3>
+
+    <h2 id="section-ru"> ODDTALE 2025 --  Программа </h2>
 
     <h3>Суббота 31 мая</h3>
     <table>
@@ -166,7 +170,7 @@
                 22:00
             </td>
             <td class="title">
-                Début de la soirée dansante (boum) & de la soirée ludique (pas boum)
+                Начало танцевальной вечеринки (бум) и игрового вечера (не бум)
             </td>
         </tr>
         <tr>
@@ -176,11 +180,11 @@
         </tr>
     </table>
 
-    <h3>Dimanche 1 juin</h3>
+    <h3>Воскресенье 1 июня</h3>
     <table>
         <tr>
             <td class="date" rowspan="2">
-                11h
+                11:00
             </td>
             <td class="title-special">
                 Brunch et discutaille
@@ -196,7 +200,7 @@
     <table>
         <tr>
             <td class="date" rowspan="2">
-                15h
+                15:00
             </td>
             <td class="title">
                 Soirée de rangement festive
@@ -209,7 +213,7 @@
         </tr>
     </table>
 
-    <h2> ODDTALE 2025 -- Programme </h2>
+    <h2 id="section-fr"> ODDTALE 2025 -- Programme </h2>
 
 <!--    Programme du mariage :
 Samedi :
@@ -376,21 +380,21 @@ Dimanche :
         </tr>
     </table>
 
-    <h2> ODDTALE 2025 -- Programme </h2>
+    <h2 id="section-en"> ODDTALE 2025 -- Program </h2>
 
-    <h3>Samedi 31 mai</h3>
+    <h3>Saturday, May 31</h3>
     <table>
         <tr>
             <td class="date" rowspan="2">
-                13h30-14h30
+                1:30 - 2:30 p.m.
             </td>
             <td class="title-special">
-                Accueil
+               Welcome
             </td>
         </tr>
         <tr>
             <td class="abstract">
-                Accueil, distribution des dortoirs et emplacements des tentes, installation sur place. 
+                Welcome, distribution of dormitories and tent sites, on-site installation. 
             </td>
         </tr>
     </table>
@@ -398,15 +402,15 @@ Dimanche :
     <table>
         <tr>
             <td class="date" rowspan="3">
-                14h30-15h30
+                2:30 - 3:30 p.m.
             </td>
             <td class="title">
-                Rassemblement
+                Gathering
             </td>
         </tr>
         <tr>
             <td class="abstract">
-                Préparez vos voix et vos élocutions, on prévoit les cartons ! Voir Ressources pour plus de détails.
+                Prepare your voices and your pronunciations, we're providing the lyrics! See Resources for more details.
             </td>
         </tr>
     </table>
@@ -414,10 +418,10 @@ Dimanche :
     <table class="plenary">
         <tr>
             <td class="date" rowspan="3">
-                15h30-17h
+                3:30 - 5:00 p.m.
             </td>
             <td class="title">
-                Conférence invitée/keynote
+                Keynote 
             </td> 
         </tr>
    <!--      <tr>
@@ -427,7 +431,7 @@ Dimanche :
         </tr> 
         <tr>
             <td class="abstract">
-                Une invocation et de l'eau chaude, quelques histoires plus tard, l'intrication aura-t-elle lieu ?
+                A summoning, some hot water, a few stories later, will the entanglement take place?
             </td>
         </tr>
     </table>
@@ -435,15 +439,15 @@ Dimanche :
     <table>
         <tr>
             <td class="date" rowspan="3">
-                17h-18h 
+                5:00 - 6:00 p.m.
             </td>
             <td class="title-special">
-                Thé d'honneur
+                Tea d'honneur
             </td>
         </tr>
         <tr>
             <td class="abstract">
-                En l'honneur des personnes invitées, en l'honneur de l'occasion, au plaisir de la partager avec vous.
+                To honor the guests, to honor of the event, to the pleasure of sharing it with you.
             </td>
         </tr>
     </table>
@@ -451,15 +455,15 @@ Dimanche :
     <table>
         <tr>
             <td class="date" rowspan="3">
-                18h-20h
+                18:00 - 20:00 p.m.
             </td>
             <td class="title">
-                Grande joute et petite soirée dansante
+                Great joust and little dance party
             </td>
         </tr>
         <tr>
             <td class="abstract">
-                Quelques épées, un bout de troll, de quoi dégourdir de petites et grandes jambes ! Si l'improvisation ne vous inspire pas, venez-donc voir dans les Ressources.
+                A few swords, a small piece of troll, enough to stretch legs both big and small! If improvisation doesn't suit you, take a look at our Resources.            
             </td>
         </tr>
     </table>
@@ -467,15 +471,15 @@ Dimanche :
     <table>
         <tr>
             <td class="date" rowspan="2">
-                20h
+                20:00 p.m.
             </td>
             <td class="title-special">
-                Début du repas
+                Beginning of the feast
             </td>
         </tr>
         <tr>
             <td class="abstract">
-                Ce sera un buffet, les ingrédients seront explicités autant que possible. N'oubliez pas de nous préciser toute intolérance, allergie, ou régime alimentaire dans le formulaire de participation !
+                It will be a buffet, with ingredients explained as much as possible. Don't forget to specify any intolerances, allergies or dietary requirements on the entry form!            
             </td>
         </tr>
     </table>
@@ -483,32 +487,32 @@ Dimanche :
     <table>
         <tr>
             <td class="date" rowspan="2">
-                22h
+                22:00 p.m.
             </td>
             <td class="title">
-                Début de la soirée dansante (boum) & de la soirée ludique (pas boum)
+                Start of dance party (boom) & games night (no boom)
             </td>
         </tr>
         <tr>
             <td class="abstract">
-                Que vous aimiez vos décibels nombreux et clinquants ou précieux et doux, nous vous souhaitons chaussure et salle à votre pied.
+                Whether you like your decibels numerous and flashy or precious and soft, we wish you just the right happening and the right room.
             </td>
         </tr>
     </table>
 
-    <h3>Dimanche 1 juin</h3>
+    <h3>Sunday, June 1</h3>
     <table>
         <tr>
             <td class="date" rowspan="2">
-                11h
+                11:00 p.m.
             </td>
             <td class="title-special">
-                Brunch et discutaille
+                Brunch and conversation
             </td>
         </tr>
         <tr>
             <td class="abstract">
-                On s'occupe du brunch et avec un peu de chance, le reste viendra !
+                We'll take care of the brunch, and hopefully the rest will follow!
             </td>
         </tr>
     </table>
@@ -516,15 +520,15 @@ Dimanche :
     <table>
         <tr>
             <td class="date" rowspan="2">
-                15h
+                15:00 p.m.
             </td>
             <td class="title">
-                Soirée de rangement festive
+                Celebratory tidy-up party
             </td>
         </tr>
         <tr>
             <td class="abstract">
-               L'ambiance sera présente, les serpillères et le lave vaisselle aussi.
+                The mood will be there, and so will the mops and dishwasher.
             </td>
         </tr>
     </table>
